Updated the Project

--- a/NLP_Projects.ipynb
+++ b/NLP_Projects.ipynb
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8qKpTn_XS2h",
-        "outputId": "3e42d94d-5767-4976-f147-c12af5eabdce"
+        "outputId": "7d14da57-350b-4045-df8d-b4fe870a6d8b"
       },
       "execution_count": null,
       "outputs": [
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b7CT2O3aYKr0",
-        "outputId": "21447d36-e2a6-42a8-dc97-d15446d807d2"
+        "outputId": "cbb81fa2-9496-4820-db03-ca0dc1aece2c"
       },
       "execution_count": null,
       "outputs": [
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJEdtwwpbTH4",
-        "outputId": "f53ee09d-60d1-4511-9c36-2c8a886e46d6"
+        "outputId": "0b54c2b8-8e12-4108-d9ee-c8a8958aa886"
       },
       "execution_count": null,
       "outputs": [
@@ -177,23 +177,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Email Extractor: Write a program that scans a document and extracts all the email addresses. You can use rule-based matching to identify patterns that match the structure of an email address.\n",
-        "\n",
-        "Date Finder: Create a program that can find and extract all dates from a document. Dates can come in various formats (e.g., MM-DD-YYYY, DD/MM/YYYY, Month Day, Year, etc.), so you'll need to create different rules to match each format.\n",
-        "\n",
-        "Hashtag Analyzer: Analyze social media posts or comments for hashtags. Write a program that can extract all hashtags from a given text. This will help you understand how to create rules for specific patterns.\n",
-        "\n",
-        "URL Extractor: Write a program that can extract all URLs from a document. This will involve creating rules that match the structure of a URL.\n",
-        "\n",
-        "Named Entity Recognition: While libraries like spaCy have built-in NER capabilities, you can try to build a simple NER system using rule-based matching. For example, you could write rules to identify person names, organizations, or locations.\n"
-      ],
-      "metadata": {
-        "id": "NqhfYEEev9EQ"
-      }
     },
     {
       "cell_type": "markdown",
@@ -251,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JJnG28k3XhK3",
-        "outputId": "f99ebe57-5fd5-4ed1-d208-6bffd8c25ea1"
+        "outputId": "552ff69f-f192-42c3-d49f-e293458cba3d"
       },
       "execution_count": null,
       "outputs": [
@@ -299,7 +282,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F9ebdBVzhpiH",
-        "outputId": "0505f3e0-b1f0-4514-f024-fb3a552a9175"
+        "outputId": "5f14f92a-1afe-48b6-cbf1-2c031df48045"
       },
       "execution_count": null,
       "outputs": [
@@ -349,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YvqnEUwxiMes",
-        "outputId": "c0e08246-39df-48a5-8a77-4edd244b3787"
+        "outputId": "b07a4169-6f3e-4eea-d990-43ee4b09b7a5"
       },
       "execution_count": null,
       "outputs": [
@@ -368,13 +351,100 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Named Entity Recognition:** While libraries like spaCy have built-in NER capabilities, you can try to build a simple NER system using rule-based matching. For example, you could write rules to identify person names, organizations, or locations."
+      ],
+      "metadata": {
+        "id": "0BECbt8i2a6G"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
+      "metadata": {
+        "id": "Cui8TuYRKjWS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ner_matcher = Matcher(nlp.vocab)\n",
+        "\n",
+        "ner_text = nlp(\"Google, led by CEO Sundar Pichai, is headquartered in Mountain View, California.\")\n",
+        "\n",
+        "ner_pattern =  [{\"LOWER\": \"google\"},  {\"LOWER\": \"by\"}, {\"LOWER\": \"ceo\"}, {},\n",
+        "           {\"LOWER\": \"is\"}, {\"LOWER\": \"headquartered\"}, {\"LOWER\": \"in\"}, {}, {}]\n",
+        "\n",
+        "\n",
+        "ner_matcher.add(\"Identified Tokens :\", [ner_pattern])\n",
+        "find_ner_matches = ner_matcher(ner_text)\n",
+        "\n",
+        "for hash_id, start, end in find_ner_matches:\n",
+        "  string_id = nlp.vocab.strings[hash_id]\n",
+        "  span = ner_text[start:end]\n",
+        "  print(hash_id, string_id, start, end, span.text)"
+      ],
       "metadata": {
         "id": "ERMdvjbMqn4O"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from spacy import displacy\n",
+        "text = \"Google, led by CEO Sundar Pichai, is headquartered in Mountain View, California.\"\n",
+        "\n",
+        "doc_ner = nlp(text)\n",
+        "displacy.render(doc_ner, style='ent')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "pRBB2-aeJk3f",
+        "outputId": "deb7041a-5ece-4210-ff9d-2c0a396bcd74"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+              "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    Google\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+              "</mark>\n",
+              ", led by CEO \n",
+              "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    Sundar Pichai\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
+              "</mark>\n",
+              ", is headquartered in \n",
+              "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    Mountain View\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+              "</mark>\n",
+              ", \n",
+              "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    California\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+              "</mark>\n",
+              ".</div></span>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
